--- a/persist.cabal
+++ b/persist.cabal
@@ -28,8 +28,8 @@ source-repository head
 library
         default-language:       Haskell2010
 
-        build-depends:          base >= 4.4 && < 5, containers, array,
-                                ghc-prim >= 0.2, bytestring >= 0.10.4 && < 1,
+        build-depends:          base >= 4.4 && < 5, containers,
+                                bytestring >= 0.10.4 && < 1,
                                 text >= 1.2 && < 1.3
 
         hs-source-dirs:         src
