Change source repository url to https:// scheme
Cabal warns that it should be changed from git:// to https://. Go ahead
and change it.

--- a/persist.cabal
+++ b/persist.cabal
@@ -32,7 +32,7 @@ description:
 
 source-repository head
   type: git
-  location: git://github.com/minad/persist
+  location: https://github.com/minad/persist
 
 flag force-unaligned
   manual: True
