--- a/persist.cabal
+++ b/persist.cabal
@@ -47,7 +47,7 @@ library
   build-depends:
     base >=4.16 && <5,
     bytestring >=0.11.1 && <1,
-    containers,
+    containers >=0.6.5.1 && <0.9,
     text >=1.2.5 && <2.2,
 
   if !flag(force-aligned) && (flag(force-unaligned) || arch(i386) || arch(x86_64))
@@ -66,13 +66,13 @@ test-suite test-persist
   default-language: Haskell2010
   type: exitcode-stdio-1.0
   build-depends:
-    QuickCheck,
-    base >=4.16 && <5,
-    bytestring >=0.11.1,
+    QuickCheck >=2.16.0 && <2.17,
+    base,
+    bytestring,
     persist,
-    test-framework,
-    test-framework-quickcheck2,
-    text >=1.2.5 && <2.2,
+    test-framework >=0.8.2 && <0.9,
+    test-framework-quickcheck2 >=0.3.0 && <0.4,
+    text,
 
   main-is: Main.hs
   other-modules:
